--- a/src/css/contact.scss
+++ b/src/css/contact.scss
@@ -18,33 +18,37 @@ $back-touch:rgb(9, 177, 255);
         width: 80%;
         max-width:800px;
         margin: 0 auto;
+        position: relative;
         
-        #contact-area {
-            -moz-box-sizing: content-box;
-            -webkit-box-sizing: content-box;
-            box-sizing: content-box;
-            width: 100%;
-            outline: none;
-            font-size:17px;
-            font-family: "Lato";
-            border: 1px solid rgb(216, 216, 216);
-        }
-        #contact-area:focus {
-            box-shadow: 0px 0px 6px rgb(161, 208, 250);
-        }
-
-        input[type="text"], input[type="email"] {
+        form#contact-form {
             width:100%;
-            padding:15px 10px ;
-            font-family: "Lato";
-            font-size:18px;
-            outline: none;
-            border: 1px solid rgb(212, 212, 212);
-            border-radius:7px;
+            input[type="text"], input[type="email"] {
+                width:95%;
+                padding:15px 2.5%;
+                font-family: "Lato";
+                font-size:18px;
+                outline: none;
+                border: 1px solid rgb(212, 212, 212);
+                border-radius:7px;
+            }
+            input[type="text"]:focus, input[type="email"]:focus {
+                box-shadow: 0px 0px 6px rgb(146, 204, 255);
+            }
+            textarea#contact-area {
+                padding: 15px 5%;
+                width: 90%;
+                outline: none;
+                font-size:17px;
+                font-family: "Lato";
+  
+                border: 1px solid rgb(216, 216, 216);
+            }
+            #contact-area:focus {
+                box-shadow: 0px 0px 6px rgb(161, 208, 250);
+            }
+
         }
-        input[type="text"]:focus, input[type="email"]:focus {
-            box-shadow: 0px 0px 6px rgb(146, 204, 255);
-        }
+        
 
         h1 {
             margin-top: 30px;
@@ -60,7 +64,7 @@ $back-touch:rgb(9, 177, 255);
             flex-wrap: wrap;
             align-items: center;
             justify-content:space-evenly;
-            
+
 
             a {
                 text-decoration: none;
@@ -77,10 +81,10 @@ $back-touch:rgb(9, 177, 255);
             -moz-box-sizing: content-box;
             -webkit-box-sizing: content-box;
             box-sizing: content-box;
-            width: 100%;
+            width: 95%;
             height:50px;
-            padding-right: 9px;
-            padding-left: 9px;
+            padding-right: 2.5%;
+            padding-left: 2.5%;
             margin-top: 20px;
             cursor: pointer;
             font-family: "Lato";
@@ -94,4 +98,22 @@ $back-touch:rgb(9, 177, 255);
             background-color: adjust-color($back-touch,$hue: 0, $saturation: 0%, $lightness: -9%, $alpha: 1.0);
         }
     }
+}
+
+@media only screen and (max-width:400px) {
+
+    #outer-contact {
+        .contact {
+            form#contact-form {
+                
+            }
+            h2 {
+                font-size: 21px;
+            }
+        
+        }
+
+    }
+
+   
 }
