event modal location change

--- a/src/css/navigation.scss
+++ b/src/css/navigation.scss
@@ -190,6 +190,7 @@ position: relative;
         top:148px;
         left: 118px;
         fill:$blue-logo;
+        padding-left: 5px;
     }
 
     
@@ -209,7 +210,7 @@ position: relative;
         #event-modal {
             position: absolute;
             margin-top: 55px;
-            top:65px;
+            top:123px;
             display:block;
             
             width:fit-content;
