--- a/src/css/navigation.scss
+++ b/src/css/navigation.scss
@@ -14,7 +14,7 @@ body, html {
     padding: 0;
     overflow-x: hidden !important;
     height:100%;
-    
+    overflow-y: scroll;
 }
 
 #navigation {
