--- a/src/css/blogs.scss
+++ b/src/css/blogs.scss
@@ -21,6 +21,7 @@
     flex-wrap: wrap;
     justify-content:center;
     margin-bottom: 20%;
+    height:80%;
     .blog {
        cursor: pointer;
         .date-name {
