added css changes and styling issues

--- a/src/css/blog.scss
+++ b/src/css/blog.scss
@@ -8,7 +8,7 @@ $max-w-family:860px;
     margin:0 auto;
     max-width:860px;
     margin-top: 50px;
-
+    min-height:70vh;
     img#blog-image {
         
         width: 100%;
