--- a/src/css/blogs.scss
+++ b/src/css/blogs.scss
@@ -20,8 +20,7 @@
     margin-top: 20px;
     flex-wrap: wrap;
     justify-content:center;
-    margin-bottom: 20%;
-    height:80%;
+    min-height:70vh;
     .blog {
        cursor: pointer;
         .date-name {
