fixed blog nav for sure

--- a/src/css/navigation.scss
+++ b/src/css/navigation.scss
@@ -73,13 +73,13 @@ body, html {
 
 #navigation, #navigation-small {
 
-   
+    padding-bottom: 50px;
     
     #logo {
-        width: 50px;
+        width: 40px;
         position: absolute ;
         
-        top: 10px;
+        top: 15px;
         left: 20px;
         z-index: 100000000;
         
