--- a/src/css/navigation.scss
+++ b/src/css/navigation.scss
@@ -31,10 +31,8 @@ body, html {
             position: absolute;
             top:65px;
             display:block;
-            
             width:fit-content;
             font-size:16px !important;
-            
             height: fit-content;
             background-color: $back-color;
             z-index:100000000000 !important;
@@ -205,7 +203,7 @@ position: relative;
     
     #event-nav-small {
         width:100px;
-        margin-bottom: 30px;
+        opacity: 1;
         padding-bottom: 20px;
         
         #event-modal {
@@ -221,7 +219,7 @@ position: relative;
             background-color: $back-color;
             z-index:100000000000 !important;
             background-position: 0px;
-            -webkit-background-clip: none;
+            
             -webkit-text-fill-color:#808080;
             cursor:default;
             background-image: none;
